# joestar-ed

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  README.org  TODO  TODO.org  autojoe  configure.ac  err.txt  jnote  test.txt
colors/: Makefile.in  manoj_dark.jcf  rgb.jcf
desktop/: Makefile.in  jnote.desktop
joe/: Makefile.am  autoconf.h  joestar  stringify  termidx  tw.c
joe/.deps/: bw.Po  cmd.Po  hash.Po  help.Po  i18n.Po  kbd.Po  lattr.Po  macro.Po  mouse.Po  options.Po  queue.Po  regex.Po  selinux.Po  stringify.Po  tab.Po  termcap.Po  tty.Po  tw.Po  uedit.Po  uformat.Po  uisrch.Po  umath.Po  undo.Po  ushell.Po  utag.Po  utf8.Po  utils.Po  va.Po  vfile.Po  vs.Po  vt.Po
man/: Makefile.in  joe.1
man/ru/: Makefile.in  joe.1
po/: Makefile.in
rc/: Makefile.am  Makefile.in  ftyperc  jicerc.ru  jmacsrc  jnoterc  joerc  joerc.zh_TW  joestarrc.in  jpicorc  jstarrc  rjoerc
src/: CMakeLists.txt  Makefile.am  Makefile.in  TODO  autoconf.h  autoconf.h.in  b.c  b.h  bridge.c  bridge.cpp  bridge.h  bridge.hpp  builtins.c  bw.c  cmd.c  cmd.h  colors.c  config.h.in  init.lua  jlua.c  jlua.cpp  jlua.h  jlua.hpp  joemain.c  joesinit.lua  joestar  joestar.cpp  joestar.h  lua.c  lua.h  main.c  main2.c  menu.c  note  options.c  options.h  rc.c  stringify  syntax.c  termidx  (+5 more)
src/.deps/: b.Po  blocks.Po  builtin.Po  builtins.Po  bw.Po  cclass.Po  charmap.Po  cmd.Po  colors.Po  frag.Po  gettext.Po  hash.Po  help.Po  kbd.Po  lattr.Po  macro.Po  main.Po  menu.Po  mmenu.Po  mouse.Po  options.Po  path.Po  poshist.Po  pw.Po  queue.Po  qw.Po  rc.Po  regex.Po  scrn.Po  selinux.Po  state.Po  syntax.Po  tab.Po  termcap.Po  termidx.Po  tty.Po  tw.Po  ublock.Po  uedit.Po  uerror.Po  (+17 more)
src/util/: Makefile.in  checkwidths  stringify  termidx  uniproc
src/util/.deps/: checkwidths.Po  termidx.Po  uniproc.Po
syntax/: Makefile.in  c.jsf
tests/: CMakeLists.txt  README.md  bridge.cpp  lua.cpp  main.cpp  makeout.txt  ublock.cpp
